5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1643_2704.log
== TEST (2019-04-08 20:12:31) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificaçao ? (S/N)")

if (b.upper() == S)
	a = n * (10/100)
	print(n + a)
else
	print(n)
-- ERROR:
File "XXXX", line 4
    if (b.upper() == S)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:12:48) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificaçao ? (S/N)")

if (b.upper() == S) :
	a = n * (10/100)
	print(n + a)
else :
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b.upper() == S) :
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:13:06) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificacao ? (S/N)")

if (b.upper() == S) :
	a = n * (10/100)
	print(n + a)
else :
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b.upper() == S) :
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:14:13) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificacao ? (S/N)")

if (b.upper() == S) :
	a = n * (10/100)
	print(n + a)
else :
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b.upper() == S) :
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:14:49) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificacao ? (S/N)")

if (b.upper() == "S") :
	a = n * (10/100)
	print(n + a)
else :
	print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:14:58) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificacao ? (S/N)")

if (b.upper() == "S") :
	a = n * (10/100)
	print(n + a)
else :
	print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:15:21) 
-- CODE:
n = float(input("Digite a nota do aluno de 0 a 10: "))
b = input("Aluno vai receber bonificacao ? (S/N)")

if (b.upper() == "S") :
	a = n * (10/100)
	print(n + a)
else :
	print(n)
-- EXECUTION TIME:
0.147108
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
